--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentChangeRole.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/mass_assignment/MassAssignmentChangeRole.yaml
@@ -1,9 +1,9 @@
 id: MASS_ASSIGNMENT_CHANGE_ROLE
 info:
-  name: "Mass assignment leading to creation of admin role"
-  description: "The endpoint appears to be vulnerable to Mass Assignment attack. The original request was replayed by adding role with admin permissions in request body. The application responded with 2XX success code in response."
+  name: "Mass assignment leading to modification of role"
+  description: "The endpoint appears to be vulnerable to Mass Assignment attack. The original request was replayed by modifyinh role param in request body. The application responded with 2XX success code in response."
   details: >
-    "The endpoint appears to be vulnerable to Mass Assignment attack. The original request was replayed by adding role with admin permissions in request body. The application responded with 2XX success code in response.
+    "The endpoint appears to be vulnerable to Mass Assignment attack. The original request was replayed by modifyinh role param in request body. The application responded with 2XX success code in response.
     <b>Background:</b>
     Objects in modern applications might contain many properties. Some of these properties should be updated directly by the client (e.g., user.first_name or user.address) and some of them should not (e.g., user.is_vip flag).\n"
     "An API endpoint is vulnerable if it automatically converts client parameters into internal object properties, without considering the sensitivity and the exposure level of these properties. This could allow an attacker to update object properties that they should not have access to.\n"
