fixed filter for csrf login attack

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CSRFLoginAttack.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CSRFLoginAttack.yaml
@@ -43,7 +43,7 @@ api_selection_filters:
   request_headers:
     for_one:
       key:
-        regex: ^(?!.*host)(?!.*cookie)(?!.*content-type).*$
+        contains_either: cookie
         extract: header_key
 
 execute:
