--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FetchSensitiveFilesViaSSRF.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FetchSensitiveFilesViaSSRF.yaml
@@ -67,3 +67,20 @@ validate:
   response_code:
     gte: 200
     lt: 300
+  response_payload:
+    contains_either:
+      - root
+      - daemon
+      - http
+      - Linux
+      - Ubuntu
+      - OS
+      - 127.0.0.1
+      - localhost
+      - =
+      - :
+      - /proc/self/cmdline
+      - php
+      - import
+      - def
+      - main
