--- a/apps/api-runtime/Dockerfile
+++ b/apps/api-runtime/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk
+FROM openjdk:latest
 WORKDIR /app
 COPY ./target/api-runtime-1.0-SNAPSHOT-jar-with-dependencies.jar /app/api-runtime-1.0-SNAPSHOT-jar-with-dependencies.jar
 CMD "java" "-XX:+ExitOnOutOfMemoryError" "-jar" "/app/api-runtime-1.0-SNAPSHOT-jar-with-dependencies.jar"
